--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "build",
-    "lib": ["ES2019"]
+    "lib": ["ES2019"],
+    "declaration": true
   },
   "include": ["src/**/*.ts"],
   "exclude": ["test/**/*.ts"]
